# LodickyUdSP

./: CMakeLists.txt  GUI.c  GUI.h  Game_Logic.c  Game_Logic.h  GenericMatrix.c  GenericMatrix.h  Hrac.c  Hrac.h  HraciaPlocha.c  HraciaPlocha.h  Policko.c  Policko.h  TypPolickaEnum.h  main.c  valgrind.xml
GUI_res/: Button.css
Grafika/: Style.css
